# gen-pixelart

./: .gitignore  AGENTS.md  README.md  pixel-gen-handover.md  pyproject.toml
.agents/dev_docs/: README.md  ROADMAP.md  decisions.md
.agents/dev_docs/active/06-refinements/: refinements-plan.md  refinements-tasks.md
.agents/dev_docs/archive/01-skeleton/: skeleton-context.md  skeleton-plan.md  skeleton-tasks.md
.agents/dev_docs/archive/02-data/: data-context.md  data-plan.md  data-tasks.md
.agents/dev_docs/archive/03-vae/: vae-context.md  vae-plan.md  vae-tasks.md
.agents/dev_docs/archive/04-vqvae/: vqvae-context.md  vqvae-plan.md  vqvae-tasks.md
.agents/dev_docs/archive/05-diffusion/: diffusion-context.md  diffusion-plan.md  diffusion-tasks.md
.agents/dev_docs/archive/06-refinements/: refinements-context.md
.claude/: settings.json
.claude/hooks/: post-strategy-edit.sh  prompt-context.sh  session-start.sh
configs/: base.yaml  diffusion.yaml  vae.yaml  vqvae.yaml
docs/learn/: 00-strategy-pattern.md  01-data-pipeline.md  02-vae.md  03-vqvae.md  04-diffusion.md  05-conditioning.md  06-conditioning-analysis.md  07-classifier-free-guidance.md
scripts/: cluster_sprites.py  compare_runs.py  download_data.py  sample.py  smoke_test.py  train.py  train_cfg.py  train_comparison.py  train_conditional.py  train_vqvae_prior.py
src/: config.py  mlflow_logger.py  palette.py  trainer.py
src/data/: dataset.py
src/models/: blocks.py  codebook.py  encoder.py  prior.py  unet.py
src/strategies/: base.py  diffusion.py  dummy.py  vae.py  vqvae.py
(+5 files in other folders)
