[project]
name = "pixel-gen"
version = "0.1.0"
description = "Pixel art generative model — comparing VAE / VQ-VAE / Diffusion via strategy pattern on MLX"
requires-python = ">=3.11"
dependencies = [
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "pillow>=12.2.0",
    "torch>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
]
